--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "MySQL": "server=localhost;database=mormordagnysbageri;user=root;password=50centare;port=3306",
     "DevConnection": "Data Source = mormordagnysbageri.db "
   },
   "Logging": {
